# Web-Scrapper

./: CMakeLists.txt
include/: other_header_file.h  scraper.h
src/: main.cpp  scraper.cpp  scraper.h
